--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,13 @@
-# TODO: --with-shell=sh, --disable-warnings
+# check if shell accepts `-c cmd` and `-e`
+AC_PREREQ([2.64])
 AC_INIT([mk], [0.0], [benni@stuerz.xyz])
+
+AS_IF([test "x$(uname)" = 'xXENIX'], [
+       ac_cv_path_GREP='/bin/grep'
+])
+
+AC_CONFIG_SRCDIR([mk.c])
+AC_CONFIG_AUX_DIR([build-aux])
 
 AC_DEFUN([MK_CHECK_COMPILE_FLAG], [
 	AX_CHECK_COMPILE_FLAG([$1], [CFLAGS="${CFLAGS} $1"])
@@ -15,11 +23,8 @@ AC_ARG_WITH([makefile],
 	[mk_makefile=$with_makefile],
 	[mk_makefile="Mkfile"])
 
-
-AC_CONFIG_SRCDIR([mk.c])
-AC_CONFIG_AUX_DIR([build-aux])
-
 AC_PROG_CC
+AC_PROG_INSTALL
 
 AC_USE_SYSTEM_EXTENSIONS
 MK_CHECK_COMPILE_FLAG([-ansi])
@@ -44,14 +49,15 @@ AS_IF([test "x$enable_warnings" != "xno"], [
 ])
 
 AC_FUNC_FORK
-AC_CHECK_FUNCS([reallocarray fnmatch basename dirname strdup realpath strsep clock_gettime fmemopen])
-AC_CHECK_HEADERS([err.h fnmatch.h libgen.h sys/time.h])
+AC_CHECK_FUNCS([reallocarray fnmatch basename dirname strdup realpath strsep clock_gettime gettimeofday ftime fmemopen lstat memmove])
+AC_CHECK_HEADERS([err.h fnmatch.h libgen.h limits.h sys/time.h sys/wait.h])
 AC_CHECK_MEMBER([struct timespec.tv_nsec], [
 	AC_DEFINE([HAVE_TIMESPEC], [1], [Define to 1 if you have the 'timespec' struct])
 ])
 AC_CHECK_MEMBER([struct stat.st_mtim], [
 	AC_DEFINE([HAVE_STAT_MTIM], [1], [Define to 1 if you have the 'st_mtim' field in 'struct stat'])
 ])
+AC_CHECK_TYPE([ssize_t], [int])
 
 AC_MSG_CHECKING([if the C compiler supports C99's designated initializers])
 mk_have_designated_initializers=no
@@ -70,8 +76,24 @@ AC_COMPILE_IFELSE([
 ])
 AC_MSG_RESULT([$mk_have_designated_initializers])
 
-AS_IF([test "x$ac_cv_func_clock_gettime" = "xno"], [
-	AC_CHECK_FUNC([gettimeofday])
+mk_run_sh() {
+	"$mk_shell" "$@" >/dev/null 2>&1
+}
+
+AC_MSG_CHECKING([if $mk_shell supports -c cmd])
+AS_IF([mk_run_sh -c 'true'], [mk_cv_shell_c=yes], [mk_cv_shell_c=no])
+AC_MSG_RESULT([$mk_cv_shell_c])
+
+AC_MSG_CHECKING([if $mk_shell supports -e])
+mk_run_sh -e -c 'true'
+mk_cv_shell_e1=$?
+mk_run_sh -e -c 'x() { return 5; }; x; true'
+mk_cv_shell_e2=$?
+AS_IF([test "$mk_cv_shell_e1" = 0 && test "$mk_cv_shell_e2" = 5], [mk_cv_shell_e=yes], [mk_cv_shell_e=no])
+AC_MSG_RESULT([$mk_cv_shell_e])
+
+AS_IF([test "x$mk_cv_shell_c" != 'xno'], [
+       as_fn_error 1 "$mk_shell is not a working shell"
 ])
 
 AC_DEFINE_UNQUOTED([SHELL], ["$mk_shell"], [Default value for SHELL variable])
