CI/openbsd: install desktop

--- a/.builds/openbsd.yml
+++ b/.builds/openbsd.yml
@@ -31,4 +31,6 @@ tasks:
       doas mk install
   - build-desktop: |
       cd desktop
-      mk
+      mk -o obj
+      mk -o obj DESTDIR=$PWD/_install install
+      find _install
