CI/openbsd: desktop: mk install-etc

--- a/.builds/openbsd.yml
+++ b/.builds/openbsd.yml
@@ -30,7 +30,8 @@ tasks:
       mk
       doas mk install
   - build-desktop: |
+      # build one of my projects that use bmk, to verify that everything works
       cd desktop
       mk -o obj
-      mk -o obj DESTDIR=$PWD/_install install
+      mk -o obj DESTDIR=$PWD/_install install install-etc
       find _install
