--- a/.builds/alpine.yml
+++ b/.builds/alpine.yml
@@ -9,21 +9,21 @@ tasks:
   - build-bootstrap: |
       cd bmk
       touch config.mk
-      make configure
+      ./autogen.sh
       ./configure
       make
       sudo make install
       make distclean
   - build-pcc: |
       cd bmk
-      mk configure
+      ./autogen.sh
       CC=pcc ./configure
       mk
       sudo mk install
       mk distclean
   - build-self: |
       cd bmk
-      mk configure
+      ./autogen.sh
       ./configure
       mk
       sudo mk install
