move macros into m4/

--- a/configure.ac
+++ b/configure.ac
@@ -9,33 +9,10 @@ AS_IF([test "x$(uname)" = 'xXENIX'], [
 
 AC_CONFIG_SRCDIR([mk.c])
 AC_CONFIG_AUX_DIR([build-aux])
+m4_include([m4/as_help_string.m4])
 m4_include([m4/ax_compiler_vendor.m4])
+m4_include([m4/mk_check_compile_flag.m4])
 m4_include([m4/mk_use_system_extensions.m4])
-
-# MK_CHECK_COMPILE_FLAG(FLAG)
-AC_DEFUN([MK_CHECK_COMPILE_FLAG], [
-	AS_VAR_PUSHDEF([CACHEVAR], [mk_cv_check_compile_flags_$1])
-	AC_CACHE_CHECK([whether the C compiler accepts $1], CACHEVAR, [
-		mk_check_save_flags="$CFLAGS"
-		CFLAGS="$CFLAGS $1 -Werror"
-		AC_COMPILE_IFELSE([AC_LANG_PROGRAM()],
-			[AS_VAR_SET(CACHEVAR, [yes])],
-			[AS_VAR_SET(CACHEVAR, [no])])
-		CFLAGS="$mk_check_save_flags"
-	])
-	AS_IF([test x$CACHEVAR = xyes], [CFLAGS="$CFLAGS $1"], [:])
-	AS_VAR_POPDEF([CACHEVAR])
-])
-
-# This is only available starting with autoconf-2.58
-m4_define([AS_HELP_STRING],
-[m4_pushdef([AS_Prefix], m4_default([$3], [                          ]))
-m4_pushdef([AS_Prefix_Format],
-	   [  %-]m4_eval(m4_len(AS_Prefix) - 3)[s ])
-m4_text_wrap([$2], AS_Prefix, m4_format(AS_Prefix_Format, [$1]))
-m4_popdef([AS_Prefix_Format])
-m4_popdef([AS_Prefix])
-])
 
 AC_ARG_ENABLE([warnings], AS_HELP_STRING([--disable-warnings], [disable compiler warnings]))
 AC_ARG_WITH([shell],
